# ai-shield-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/ai_shield/: __init__.py  mcp_server.py  shield.py  types.py
src/ai_shield/audit/: __init__.py  logger.py  types.py
src/ai_shield/cache/: __init__.py  lru.py
src/ai_shield/cost/: __init__.py  anomaly.py  pricing.py  tracker.py
src/ai_shield/policy/: __init__.py  engine.py  tools.py
src/ai_shield/scanner/: __init__.py  canary.py  chain.py  heuristic.py  ingestion.py  output.py  pii.py
tests/: conftest.py  test_anomaly.py  test_audit.py  test_canary.py  test_chain.py  test_cost.py  test_detection_parity.py  test_heuristic.py  test_ingestion.py  test_lru.py  test_mcp_server.py  test_normalization.py  test_output.py  test_pii.py  test_policy.py  test_pricing.py  test_shield.py  test_typoglycemia.py
